frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kh-frontend
spec:
  replicas: 1 #aantal frontend pods instellen
  selector:
    matchLabels:
      app: kh-frontend
  template:
    metadata:
      labels:
        app: kh-frontend
    spec:
      containers:
        - name: kh-frontend
          #image: nginx:1.25-alpine  # ipv nginx:latest
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: kh-frontend-html
