kh-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kh-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # ->gebruik de ClusterIssuer genaamd letsencrypt-prod om een certificaat aan te vragen voor deze Ingress.
spec:
  #Verwijst naar welke Ingress Controller gebruikt wordt (NGINX)
  ingressClassName: nginx
  tls:
  - hosts:
    - kevinhofmans.xyz #-> voor welk domein moet er een certificaat aangevraagd worden
    secretName: kh-tls # ->Hier wordt het https certificaat opgeslagen. Dit certificaat is specifiek voor het domain kevinhofmans.xyz
    #De ingress controller leest dit Secret automatisch om HTTPS te activeren.
  rules:
    - host: kevinhofmans.xyz #aangekochte domeinnaam
      http:
        paths:
          #Alles dat begint met /api gaat naar de API service
          - path: /api
            #Prefix = alles dat begint met dit pad matcht (bijv. /api/users, /api/container-id)
            pathType: Prefix
            backend:
              service:
                name: kh-api
                port:
                  number: 8000
          #Al het overige verkeer gaat naar de frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kh-frontend
                port:
                  number: 80
#Volgorde is belangrijk: /api staat eerst omdat het specifieker is.
#Kubernetes matcht van boven naar beneden, dus /api wordt eerst gecheckt voordat / alles opvangt.
